modules/network/subnets.tf
# Create a private subnet in availability zone 'a'
resource "aws_subnet" "Private-Lab4-eu-north-1a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/20"
  availability_zone = "eu-north-1a"
  map_public_ip_on_launch = false

  tags = {
    "Name"                              = "Private-Lab4-eu-north-1a"
    "kubernetes.io/role/internal-elb"   = "1"
    "kubernetes.io/cluster/Lab4-EKS-tf" = "owned"
  }
}

# Create a private subnet in availability zone 'b'
resource "aws_subnet" "Private-Lab4-eu-north-1b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.16.0/20"
  availability_zone = "eu-north-1b"
  map_public_ip_on_launch = false

  tags = {
    "Name"                              = "Private-Lab4-eu-north-1b"
    "kubernetes.io/role/internal-elb"   = "1"
    "kubernetes.io/cluster/Lab4-EKS-tf" = "owned"
  }
}

# Create a public subnet in availability zone 'a'
resource "aws_subnet" "Public-Lab4-eu-north-1a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.32.0/20"
  availability_zone       = "eu-north-1a"
  map_public_ip_on_launch = true

  tags = {
    "Name"                              = "Public-Lab4-eu-north-1a"
    "kubernetes.io/role/elb"            = "1"
    "kubernetes.io/cluster/Lab4-EKS-tf" = "owned"
  }
}

# Create a public subnet in availability zone 'b'
resource "aws_subnet" "Public-Lab4-eu-north-1b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.48.0/20"
  availability_zone       = "eu-north-1b"
  map_public_ip_on_launch = true

  tags = {
    "Name"                              = "Public-Lab4-eu-north-1b"
    "kubernetes.io/role/elb"            = "1"
    "kubernetes.io/cluster/Lab4-EKS-tf" = "owned"
  }
}
